# logic-gate-sim

./: CMakeLists.txt  README.md
include/logic/: Component.hpp  ComponentManager.hpp  Gate.hpp  Slot.hpp
include/ui/: ComponentMenu.hpp
src/: main.cpp
src/logic/: Component.cpp  ComponentManager.cpp  Gate.cpp  Slot.cpp
